--- a/src/app/components/comparacion-pilotos/comparacion-pilotos.component.html
+++ b/src/app/components/comparacion-pilotos/comparacion-pilotos.component.html
@@ -54,10 +54,9 @@
                     
                     </div>
                 </form>
-                
+                	
+                <img *ngIf="imgsrc" [src]="imgsrc" />  
         </div>
     </div>
-        <div>
-        <img>
-    
+        
     </div>
