--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
-<h3>Hola mundo</h3>
-<nav>
-    <a routerLink="/django">DJANGO</a>
-    <a routerLink="/mapa">MAPA</a>
-    <a routerLink="/node">NODE</a>
-    <a routerLink="/comparacion">COMPARACION</a>
-    <a routerLink="/carreras">CARRERAS</a>
-  </nav>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
+
