--- a/src/app/components/mostrar-resultados/mostrar-resultados.component.html
+++ b/src/app/components/mostrar-resultados/mostrar-resultados.component.html
@@ -9,26 +9,25 @@
                         <thead>
                           <tr>
                             <th scope="col">Posicion</th>
-                            <th scope="col">Codigo</th>
-                            <th scope="col">Piloto</th>
                             <th scope="col">Dorsal</th>
+                            <th scope="col">Piloto</th>
                             <th scope="col">Constructor</th>
                             <th scope="col">Puntos</th>
                             <th scope="col">Vueltas</th>
                             <th scope="col">time</th>
-
+                            <th scope="col"></th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr *ngFor="let x of carreraResultado">
                             <td>{{x.positionOrder}}</td>
-                            <td>{{x.code}}</td>
-                            <td>{{x.name}}</td>
                             <td>{{x.number}}</td>
+                            <td>{{x.name}}</td>
                             <td>{{x.constructorName}}</td>
                             <td>{{x.points}}</td>
                             <td>{{x.laps}}</td>
                             <td>{{x.time}}</td>
+                            <td><i  [routerLink]="['/resutadoDetalle', x.circuitName, x.driverId]" class="fa-solid fa-barcode" style="cursor:pointer"></i></td>
                           </tr>
                         </tbody>
                       </table>
