--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,23 @@
-<p>home works!</p>
-<mat-slider min="1" max="100" step="1" value="50"></mat-slider>
+
+<div>
+<ngb-carousel class="carousel-item" *ngIf="images ">
+    <ng-template ngbSlide  class="carousel-item" >
+      <div class="picsum-img-wrapper" style="margin-left: 480px; height:400px; margin-top: 120px;">
+         <a href="https://app-formulauno.herokuapp.com/f1/dashboard/mostrarPersonal/ALP" > 
+        <button class="btn green"><img [src]="images[0]" width="250px" height="190px" alt="Random first slide"></button></a>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide class="carousel-item" >
+      <div class="picsum-img-wrapper"style="margin-left:430px ;margin-top: 120px; height:400px;" >
+        <a href="https://app-formulauno.herokuapp.com/f1/dashboard/mostrarPersonal/FER" >
+          <button class="btn green"><img [src]="images[1]" width="350px" height="180px" alt="Random second slide"></button></a>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper"style="margin-left: 400px ;margin-top: 170px; height:400px;" >
+        <a href="https://app-formulauno.herokuapp.com/f1/dashboard/mostrarPersonal/MER" >
+          <button class="btn green"><img [src]="images[2]" width="400px" height="104px" alt="Random second slide"></button></a>
+      </div>
+    </ng-template>
+  </ngb-carousel>
+</div>
