--- a/src/app/components/comparacion-pilotos/comparacion-pilotos.component.html
+++ b/src/app/components/comparacion-pilotos/comparacion-pilotos.component.html
@@ -1,6 +1,7 @@
 <aside class="">
     <div class="d-flex justify-content-center comp mx-4 mb-3 mb-lg-4">
-        <form class="mt-3"  [formGroup]="comparacionForm" (ngSubmit)="getComparacion()">
+        <div>
+        <form class="mt-3" style="height: 200px;" [formGroup]="comparacionForm" (ngSubmit)="getComparacion()">
             <div class="mb-3">
                 <input type="text" class="form-control text-center celda" id="year" formControlName="year" autocomplete="null"
                     placeholder="Año del campeonato">
@@ -10,17 +11,12 @@
                 </div>
                 <br>
 
-                <div class="mb-3">
+                <div class="mb-3" >
                     <input type="text" class="form-control text-center celda" id="nombre" formControlName="piloto1"
                         autocomplete="null" placeholder="Primer Piloto">
                 </div>
-                <mat-slide-toggle 
-                ngModel name="enableGet"
-                color="warn"
-                disabled="disabled"
-                ></mat-slide-toggle>
 
-                <div class="mb-3">
+                <div class="mb-3" >
                     <input type="text" class="form-control text-center celda" id="pais" formControlName="piloto2"
                         autocomplete="null" placeholder="Segundo Piloto">
                 </div>
@@ -32,9 +28,18 @@
 
             </div>
         </form>
-
+        <div style="padding-top:10%" >
+            <br>
+            <mat-slide-toggle [(ngModel)]="isChecked"></mat-slide-toggle>
+            <br>
+            <br>
+            <button color="warn" *ngIf="isChecked" mat-button (click)="openDialog()">Open aid</button>
+            
+    </div>
+</div>
     </div>
     <br>
+    
 </aside>
 
 <div id="imagen">
