--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,12 +1,16 @@
-<header style="background-color:red">
-<nav class="navbar navbar-expand-lg nav-mobile-wrapper navbar-inverse bg-inverse" >
+<header >
+  <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: red; color:aliceblue">
   <img class="fit-image" src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg
   " width="100px" height="35px">
-  <button style="background-color:aliceblue" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+           data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+           aria-expanded="false" aria-label="Toggle navigation"
+           (click)="toggleCollapsed()">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse d-flex justify-content-md-center" id="navbarNavDropdown">
+
+        <div id="navbarSupportedContent" [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}" class="justify-content-center" >
       <ul class="navbar-nav " >
         <li class="nav-item active">
           <a class="nav-link"   [routerLink]="['/carreras']">Resultados <span class="sr-only">(current)</span></a>
