--- a/src/app/components/comparacion-pilotos/comparacion-pilotos.component.html
+++ b/src/app/components/comparacion-pilotos/comparacion-pilotos.component.html
@@ -1,7 +1,19 @@
+<head>
+    <style type="text/css" media="screen, print">
+    @font-face {font-family: "Formula1 Display Wide"; 
+    src: url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.eot"); 
+    src: url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.eot?#iefix") format("embedded-opentype"), 
+    url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.woff2") format("woff2"), 
+    url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.woff") format("woff"), 
+    url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.ttf") format("truetype"), 
+    url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.svg#Formula1 Display Wide") format("svg"); }
+    p { font-family: "Formula1 Display Wide" }
+  </style>
+  </head>
+
 <aside class="">
     <div class="d-flex justify-content-center comp mx-4 mb-3 mb-lg-4">
-        <div>
-        <form class="mt-3" style="height: 200px;" [formGroup]="comparacionForm" (ngSubmit)="getComparacion()">
+        <form class="mt-3"  [formGroup]="comparacionForm" (ngSubmit)="getComparacion()">
             <div class="mb-3">
                 <input type="text" class="form-control text-center celda" id="year" formControlName="year" autocomplete="null"
                     placeholder="Año del campeonato">
@@ -11,12 +23,17 @@
                 </div>
                 <br>
 
-                <div class="mb-3" >
+                <div class="mb-3">
                     <input type="text" class="form-control text-center celda" id="nombre" formControlName="piloto1"
                         autocomplete="null" placeholder="Primer Piloto">
                 </div>
+                <mat-slide-toggle 
+                ngModel name="enableGet"
+                color="warn"
+                disabled="disabled"
+                ></mat-slide-toggle>
 
-                <div class="mb-3" >
+                <div class="mb-3">
                     <input type="text" class="form-control text-center celda" id="pais" formControlName="piloto2"
                         autocomplete="null" placeholder="Segundo Piloto">
                 </div>
@@ -28,18 +45,9 @@
 
             </div>
         </form>
-        <div style="padding-top:10%" >
-            <br>
-            <mat-slide-toggle [(ngModel)]="isChecked"></mat-slide-toggle>
-            <br>
-            <br>
-            <button color="warn" *ngIf="isChecked" mat-button (click)="openDialog()">Open aid</button>
-            
-    </div>
-</div>
+
     </div>
     <br>
-    
 </aside>
 
 <div id="imagen">
