--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header >
   <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: red; color:aliceblue">
-  <img class="fit-image" src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg
-  " width="100px" height="35px">
+  <a [routerLink]="['/']"><img class="fit-image" src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg
+  " width="100px" height="35px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse"
            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
            aria-expanded="false" aria-label="Toggle navigation"
@@ -16,13 +16,10 @@
           <a class="nav-link"   [routerLink]="['/carreras']">Resultados <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link"  [routerLink]="['/telemtria']">Telemetria</a>
+          <a class="nav-link"  [routerLink]="['/telemetria']">Telemetria</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link"  [routerLink]="['/mapa']">Mapa</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link"  [routerLink]="['/mostrarCarreras']">MostrarCarreras</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link"  [routerLink]="['/comparacionPilotos']">ComparacionPilotos</a>
@@ -30,21 +27,10 @@
         <li class="nav-item ">
           <a class="nav-link" [routerLink]="['/prueba']">Prueba</a>
         </li>
-        <li class="nav-item ">
-          <a class="nav-link" [routerLink]="['/login']">carreraDetalle</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
-          </a>
-        </li> 
-        <li  class="nav-item d-flex justify-content-md-end">
+        <li  *ngIf="!variable"class="nav-item d-flex justify-content-md-end">
           <a class="nav-link " style="cursor:pointer"  [routerLink]="['/login']">Login</a>
         </li>
-        <li *ngIf="variable" class="nav-item  d-flex"  >
+        <li *ngIf="variable" class="nav-item justify-content-md-end  d-flex"  >
           <a class="nav-link" style="cursor:pointer" (click)="logout()">Log out</a>
         </li>
       </ul>
