--- a/src/app/components/mostrar-resultados/mostrar-resultados.component.css
+++ b/src/app/components/mostrar-resultados/mostrar-resultados.component.css
@@ -23,9 +23,10 @@
     box-shadow: black 0px 0px 10px;
     border-radius: 10px;
     border-color: #131313;
-    margin-top: 10px;
+    margin-top: 100px;
     margin-bottom: 10px;
     padding: 2%;
+    font-family: "Formula1 Display Wide";
   }
 
 
@@ -102,4 +103,13 @@ video {
     height: 100px;
   }
 
+  .insideIcons{
+    position: relative;
+  }
+
+  .icon {
+    position:absolute;
+    top:15px;
+    right:10px;
+  }
 
