--- a/src/app/components/mostrar-resultados/mostrar-resultados.component.html
+++ b/src/app/components/mostrar-resultados/mostrar-resultados.component.html
@@ -12,17 +12,17 @@
 </head>
 
 
-<div class="container card2 mt-5" *ngIf="variableAno">
+<div class="container card2" *ngIf="variableAno">
 
 
   <form class="mt-3" [formGroup]="yearForm" (ngSubmit)="obtenerResultado()">
-    <div class="mb-3 input-icons">
+    <div class="mb-3 insideIcons ">
      
-      <input type="text" class="form-control celda" id="year" *ngIf="variableAno" formControlName="year"
+      <input type="text" class="form-control celda " id="year" *ngIf="variableAno" formControlName="year"
         autocomplete="null" placeholder="Año del campeonato">
         
         
-        <i *ngIf="botton" (click)="obtenerYear()" class="fa fa-refresh fa-fw  fa-1x" aria-hidden="true"
+        <i *ngIf="botton" (click)="obtenerYear()" class="fa fa-refresh fa-fw icon fa-1x" aria-hidden="true"
                     style="cursor:pointer"></i>
 
       <div class="text-danger" *ngIf="yearForm.get('year')?.hasError('required') && yearForm.get('year')?.touched">
@@ -39,7 +39,7 @@
       </select>
     </div>
     <div *ngIf="botton" class="mb-3">
-      <button type="submit"  [disabled] = "yearForm.invalid" class="button-49" style="margin-left:530px">Enviar</button>
+      <button type="submit"  [disabled] = "yearForm.invalid" class="button-49" style="margin-left:530px; font-family:Formula1 Display Wide">Enviar</button>
     </div>
   </form>
 
@@ -51,7 +51,7 @@
 
 <div *ngIf="!variableCircuito && !variableAno">
 
-  <video playsinline autoplay muted loop poster="cake.jpg">
+  <video playsinline autoplay muted loop >
     <source src="https://media.gettyimages.com/videos/aerial-view-of-silverstone-circuit-tracking-in-video-id1325259761" type="video/webm">
     Your browser does not support the video tag.
 </video>
@@ -64,14 +64,14 @@
           <button (click)="reset()" class="btn btn-secondary float-end">RESET</button>
           <table *ngIf="carreraResultado.length > 0" class="table   opacity-75 principal table-hover mt-3">
             <thead>
-              <tr>
+              <tr style= "font-family:Formula1 Display Wide">
                 <th scope="col">Posicion</th>
                 <th scope="col">Dorsal</th>
                 <th scope="col">Piloto</th>
                 <th scope="col">Constructor</th>
                 <th scope="col">Puntos</th>
                 <th scope="col">Vueltas</th>
-                <th scope="col">time</th>
+                <th scope="col">Time</th>
                 <th scope="col"></th>
               </tr>
             </thead>
