--- a/src/app/components/registrer/registrer.component.html
+++ b/src/app/components/registrer/registrer.component.html
@@ -1,71 +1,80 @@
-
-<section class="vh-100" >
+<section class="vh-100">
   <div class="container h-100 mt-5">
     <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-lg-12 col-xl-11" >
+      <div class="col-lg-12 col-xl-11">
         <div class="card text-black gradient" style="border-radius: 25px;">
           <div class="card-body p-md-5">
             <div class="row justify-content-center">
-              <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1" >
+              <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4" style="font-family:Formula1 Display Wide">Sign
+                  up</p>
 
                 <form class="mx-1 mx-md-4" [formGroup]="userForm" (ngSubmit)="addUser()">
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="text" formControlName="_nombre" class="form-control" />
-                      <label class="form-label" for="form3Example1c">Your Name</label>
+                      <input type="text" formControlName="_nombre" class="form-control celda" placeholder="Name" />
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="email" formControlName="_email" class="form-control" />
-                      <label class="form-label" for="form3Example3c">Your Email</label>
+                      <input type="email" formControlName="_email" class="form-control celda" placeholder="Email" />
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="password" formControlName="_password" class="form-control" />
-                      <label class="form-label" for="form3Example4c">Password</label>
+                      <input type="password" formControlName="_password" class="form-control celda"
+                        placeholder="Password" />
+                    </div>
+
+                  </div>
+                  <div class="mt-5"
+                    *ngIf="userForm.controls['_password'].invalid && (userForm.controls['_password'].dirty || userForm.controls['_password'].touched)"
+                    class="alert">
+                    <div *ngIf="userForm.controls['_password'].errors"
+                      style="font-family:Formula1 Display Wide; font-size:10px">
+                      Password must contain 8 characters, at least one uppercase letter, one lowercase letter and one
+                      number.
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="password" formControlName="_password2" class="form-control" />
-                      <label class="form-label" for="form3Example4cd">Repeat your password</label>
+                      <input type="password" formControlName="_password2" class="form-control celda"
+                        placeholder="Repeat Password" />
                     </div>
+
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-calendar fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="date" formControlName="_fechaNacimiento" class="form-control" />
-                      <label class="form-label" for="form3Example4cd">Date of birth</label>
+                      <input type="date" formControlName="_fechaNacimiento" class="form-control celda" placeholder="" />
                     </div>
                   </div>
 
-                  <div class="form-check d-flex justify-content-center mb-5">
-                    <input class="form-check-input me-2" type="checkbox" formControlName="_check"  ngModel required />
+                  <div class="form-check d-flex justify-content-center mb-5" style="font-family:Formula1 Display Wide">
+                    <input class="form-check-input me-2" type="checkbox" formControlName="_check" ngModel required />
                     <label class="form-check-label" for="form2Example3">
                       I agree all statements in <a href="#!">Terms of service</a>
                     </label>
-                     <div style="color: red; padding-top: 0.2rem" *ngIf="userForm.hasError('required', '_check')">
+                    <div style="color: red; padding-top: 0.2rem" *ngIf="userForm.hasError('required', '_check')">
                       You must agree with the terms
                     </div>
-                    
+
                   </div>
-                 
+
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="submit" [disabled] = "userForm.invalid" class="button-49">Register</button>
+                    <button type="submit" [disabled]="userForm.invalid" class="button-49"
+                      style="font-family:Formula1 Display Wide">Register</button>
                   </div>
 
                 </form>
@@ -73,8 +82,9 @@
               </div>
               <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                <img src="https://media.gettyimages.com/photos/race-winner-sebastian-vettel-of-germany-and-ferrari-celebrates-in-picture-id1176354646?s=2048x2048"
-                  class="img-fluid" alt="Sample image">
+                <img
+                  src="https://media.gettyimages.com/photos/race-winner-sebastian-vettel-of-germany-and-ferrari-celebrates-in-picture-id1176354646?s=2048x2048"
+                  class="img-fluid" style="border-radius:10px" alt="Sample image">
 
               </div>
             </div>
