--- a/src/app/components/comparacion-pilotos/comparacion-pilotos.component.css
+++ b/src/app/components/comparacion-pilotos/comparacion-pilotos.component.css
@@ -116,13 +116,28 @@
 
 
 aside {
-  display: flex;
+
     background-color: black;
     padding: 10px;
     float : left;
-    height: 92.5vh;
+    height: 100vh;
     width: 20%;
+    z-index: 0;
 }
+
+.toggle{
+
+display: block;
+color : whitesmoke
+
+}
+
+.button{
+  width: 80px;
+  text-align: center;
+  margin-top: 30px;
+}
+
 
 .celda {
     background-color: #323232;
@@ -130,6 +145,21 @@ aside {
     box-shadow: black 0px 0px 10px;
     border-radius: 10px;
     border-color: #131313;
+  
+  
+  }
+
+  .celda2 {
+    background-color: #323232;
+    color: greenyellow;
+    box-shadow: rgb(0, 0, 0) 0px 0px 10px;
+    border-radius: 10px;
+    border-color: greenyellow;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    font-family: "Formula1 Display Wide";
+
   
   
   }
@@ -146,9 +176,10 @@ aside {
   background-repeat: no-repeat;
   background-position: center;
   width: 80%;
-  height: 92.5vh;
+  height: 100vh;
   float: right;
   padding: 5%;
 
 
 }
+
