--- a/src/app/components/estrategia/estrategia.component.html
+++ b/src/app/components/estrategia/estrategia.component.html
@@ -1,12 +1,113 @@
 <head>
-    <style type="text/css" media="screen, print">
-    @font-face {font-family: "Formula1 Display Wide"; 
-    src: url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.eot"); 
-    src: url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.eot?#iefix") format("embedded-opentype"), 
-    url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.woff2") format("woff2"), 
-    url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.woff") format("woff"), 
-    url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.ttf") format("truetype"), 
-    url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.svg#Formula1 Display Wide") format("svg"); }
-    p { font-family: "Formula1 Display Wide" }
+  <style type="text/css" media="screen, print">
+    @font-face {
+      font-family: "Formula1 Display Wide";
+      src: url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.eot");
+      src: url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.eot?#iefix") format("embedded-opentype"),
+        url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.woff2") format("woff2"),
+        url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.woff") format("woff"),
+        url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.ttf") format("truetype"),
+        url("//db.onlinewebfonts.com/t/4944f4308352f169f622b1f098fa2203.svg#Formula1 Display Wide") format("svg");
+    }
+
+    p {
+      font-family: "Formula1 Display Wide"
+    }
   </style>
-  </head>
+</head>
+<section class="sectionForm">
+  <div class="d-flex justify-content-center">
+    <div class="formClass"[formGroup]="telemetriaForm" (ngSubmit)="obtenerTelemetria(); obtenerEstrategia()">
+      <div class="row">
+        <div class="col">
+          <!-- Name input -->
+          <div class="form-outline insideIcons">
+            <input type="text" formControlName="year" class="form-control celda2" placeholder="Year" />
+            <i class="fa fa-refresh fa-fw icon fa-1x" (click)="obtenerYear() ; obtenerPilotos()" aria-hidden="true" style="cursor:pointer"></i>
+
+          </div>
+        </div>
+        <div class="col">
+          <!-- Email input -->
+          <select formControlName="nombreCircuitos" class="form-control celda2">
+            <option value="" disabled selected>Select GP</option>
+            <option *ngFor="let x of nombre" [ngValue]="x">{{x}}</option>
+          </select>
+        </div>
+
+        <div class="col">
+          <!-- Email input -->
+          <select formControlName="piloto1" class="form-control celda2">
+            <option value="" disabled selected>Select Driver</option>
+            <option *ngFor="let x of drivers " [ngValue]="x">{{x}}</option>
+          </select>
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="d-flex justify-content-center">
+        <div class="mb-3">
+          <button type="submit" (click)="obtenerTelemetria(); obtenerEstrategia()" [disabled]="telemetriaForm.invalid" class="btn button-49 float-end"
+            style="font-family: Formula1 Display Wide">GO</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<section class="sectionForm1">
+  <div class="container1 ">
+    <div class="d-flex justify-content-center">
+      <div class=" titulo1">
+      <span>TELEMETRY PER LAP</span>
+      </div>
+    </div>
+
+
+    <div *ngIf="loading" class="loading" class="d-flex justify-content-center" style="padding-top:15%" >
+      <mat-spinner color="warn" diameter="100" class="spinner"></mat-spinner>
+    </div>
+
+    <div *ngIf="!loading" class="img1">
+      <img *ngIf="imgsrc"  [src]="imgsrc" />
+    </div>
+    
+  </div>
+
+  <div class="container2">
+    <div class="d-flex justify-content-center">
+      <div class="titulo2">
+        <span>TYRES</span>
+      </div>
+    
+    </div>
+
+
+      <div *ngIf="loading" class="loading" class="d-flex justify-content-center" style="padding-top:15%" >
+        <mat-spinner color="warn" diameter="100" class="spinner"></mat-spinner>
+      </div>
+    
+    
+    
+
+
+    <div *ngIf="!loading" class="lista ">
+      <ul class=" listaHorizontal " *ngFor="let x of tyres">
+        <li  [style.color] = "x == 'SOFT' ? 'darkred' : ((x == 'HARD' ? 'grey' : ((x == 'INTERMEDIATE' ? 'green' : ((x == 'WET' ? 'navy' : 'yellow'))))))">{{x}}</li>
+      </ul>
+    </div>
+    <div *ngIf="!loading && grafica"class="grafica">
+    <div  id='miGrafico01' >
+      <highcharts-chart
+        [Highcharts]="highcharts"
+        [options]="chartOptionsBar"
+        style="height: 100px;">
+      </highcharts-chart>
+    </div>
+    </div>
+
+  </div>
+
+
+</section>
