--- a/src/app/components/error404/error404.component.html
+++ b/src/app/components/error404/error404.component.html
@@ -20,7 +20,7 @@
 
    <div class="prueba">
 
-        <div class="col-md-12">
+        <div class="col-md-12" style="position:relative">
             <div>
                 <h1 style="font-family:Formula1 Display Wide ; font-size: 50px; ">
                     Oops!</h1>
