--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -43,32 +43,32 @@
 <div>
   <ngb-carousel>
     <ng-template ngbSlide>
-      <div class="picsum-img-wrapper" style="height: 95vh; opacity:0.7">
+      <div class="picsum-img-wrapper" style="height: 95vh; opacity:0.6">
         <img
           src="https://media.gettyimages.com/photos/max-verstappen-of-the-netherlands-and-oracle-red-bull-racing-and-picture-id1390606101?s=2048x2048">
       </div>
       <div class="carousel-caption">
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <p>Multi-core web application.</p>
       </div>
     </ng-template>
     <ng-template ngbSlide>
-      <div class="picsum-img-wrapper" style="height: 95vh; opacity:0.7">
+      <div class="picsum-img-wrapper" style="height: 95vh; opacity:0.3">
         <img
           src="https://media.gettyimages.com/photos/fernando-alonso-alpine-f1-team-a521-renault-etech-20-engine-during-picture-id1357697942?s=2048x2048"
           alt="Random second slide">
       </div>
       <div class="carousel-caption">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Analysis made by real data.</p>
       </div>
     </ng-template>
     <ng-template ngbSlide>
-      <div class="picsum-img-wrapper" style="height: 95vh; opacity:0.7">
+      <div class="picsum-img-wrapper" style="height: 95vh; opacity:0.6">
         <img
           src="https://media.gettyimages.com/photos/pole-position-qualifier-charles-leclerc-of-monaco-and-ferrari-in-picture-id1395968633?s=2048x2048"
           alt="Random third slide">
       </div>
       <div class="carousel-caption">
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <p>Performance studies using data tecnologies.</p>
       </div>
     </ng-template>
   </ngb-carousel>
