--- a/src/app/components/estrategia/estrategia.component.css
+++ b/src/app/components/estrategia/estrategia.component.css
@@ -50,7 +50,7 @@
 }
 .sectionForm1{
     width: 100%;
-    height: 90vh;
+    height: 95vh;
     float: left;
 
 }
@@ -88,7 +88,7 @@
 
 .img1{
     width: 100%;
-    height: 100%;
+    height: 70%;
     float: left;
     padding: 1%;
 
@@ -109,10 +109,12 @@
 .lista{
     width: 100%;
     padding-top: 20px;
+    padding-left: 10%;
+    padding-right: 5%;
     position: relative;
     font-family:"Formula1 Display Wide" ;
     float: right;
-    height: 20vh;
+    height: 15vh;
 
 
 }
@@ -120,8 +122,6 @@
 .listaHorizontal{
     list-style: none;
     display: inline-block;
-
-
 
 }
 
@@ -137,10 +137,17 @@
 
 #miGrafico01{
     width: 100%;
-    height: 80%;
+    height: 70%;
     float: right;
     position: absolute;
 
+}
+
+.time{
+    width: 100%;
+    height: 15%;
+    float: left;
+    padding-left: 10%;
 }
 
 
