--- a/src/app/components/mapa-mostrar/mapa-mostrar.component.html
+++ b/src/app/components/mapa-mostrar/mapa-mostrar.component.html
@@ -1,22 +1,20 @@
-<p>mapa-mostrar works!</p>
-<div class="row">
-    <div class="col-lg-6 offset-lg-3 margen">
-        <div class="card card2">
-            <div class="card-header text-center fondo">
-                <h3 class="titulo">Ticket de year</h3>
-                <form class="mt-3" [formGroup]="yearForm" (ngSubmit)="getMapbyYear()">
-                    <div class="mb-3">
-                        <input type="text" class="form-control celda" id="year" formControlName="year"  autocomplete="null"
-                            placeholder="Año del campeonato">
-                            <div class="text-danger"
-                                *ngIf="yearForm.get('year')?.hasError('required') && yearForm.get('year')?.touched">
-                               <span>El año es <b>requerido</b></span> 
-                            </div>
-                            <div class="mb-3">
-                                <button type="submit" [disabled]="yearForm.invalid" class="btn btn-success float-end">Enviar</button>
-                            </div>
-                    
-                    </div>
-                </form>
-        </div>
+
+    <div class="container card2">
+
+        <p class="titulo">Map Championship</p>
+        <form class="mt-3" [formGroup]="yearForm" (ngSubmit)="getMapbyYear()">
+            <div class="mb-3 insideIcons ">
+           
+                <input type="text" class="form-control celda " id="year" formControlName="year"
+                autocomplete="null" placeholder="Insert year">
+
+                <div class="text-danger" *ngIf="yearForm.get('year')?.hasError('required') && yearForm.get('year')?.touched">
+                    <span><b>El año es requerido</b></span>
+                </div>         
+            </div>
+            <hr />
+            <div  class="mb-3 mt-5">
+                <button type="submit"  [disabled] = "yearForm.invalid" class="button-49" style="margin-left:530px; font-family:Formula1 Display Wide">Submit</button>
+            </div>
+        </form>  
     </div>
