--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<header >
-  <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: red; color:aliceblue">
+<header style="font-family:Formula1 Display Wide; font-size:10px"> 
+  <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dpxark fixed-top" style="background-color: red; color:aliceblue">
   <a [routerLink]="['/']"><img class="fit-image" src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg
   " width="100px" height="35px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -13,19 +13,16 @@
         <div id="navbarSupportedContent" [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}" class="justify-content-center" >
       <ul class="navbar-nav " >
         <li class="nav-item active">
-          <a class="nav-link"   [routerLink]="['/carreras']">Resultados <span class="sr-only">(current)</span></a>
+          <a class="nav-link"   [routerLink]="['/carreras']">Results <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link"  [routerLink]="['/telemetria']">Telemetria</a>
+          <a class="nav-link"  [routerLink]="['/mapa']">F1 map</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link"  [routerLink]="['/mapa']">Mapa</a>
+          <a class="nav-link"  [routerLink]="['/comparacionPilotos']">Driver-comparisson</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link"  [routerLink]="['/comparacionPilotos']">ComparacionPilotos</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" [routerLink]="['/prueba']">Prueba</a>
+          <a class="nav-link" [routerLink]="['/prueba']">Telemetry</a>
         </li>
         <li  *ngIf="!variable"class="nav-item d-flex justify-content-md-end">
           <a class="nav-link " style="cursor:pointer"  [routerLink]="['/login']">Login</a>
