--- a/src/app/components/mostrar-resultados/mostrar-resultados.component.css
+++ b/src/app/components/mostrar-resultados/mostrar-resultados.component.css
@@ -25,6 +25,7 @@
     border-color: #131313;
     margin-top: 100px;
     margin-bottom: 10px;
+    height: 30vh;
     padding: 2%;
     font-family: "Formula1 Display Wide";
   }
