--- a/src/app/components/mostrar-resultados/mostrar-resultados.component.html
+++ b/src/app/components/mostrar-resultados/mostrar-resultados.component.html
@@ -11,8 +11,8 @@
 </style>
 </head>
 
-
-<div class="container card2" *ngIf="variableAno">
+<div class="mt-5">
+<div class="container card2 " *ngIf="variableAno">
 
 
   <form class="mt-3" [formGroup]="yearForm" (ngSubmit)="obtenerResultado()">
@@ -45,7 +45,7 @@
 
 </div>
 
-
+</div>
 
 
 
@@ -56,7 +56,7 @@
     Your browser does not support the video tag.
 </video>
 
-  <div class="container" >
+  <div class="container mt-5" >
     <div class="col-12 " style="padding:3%">
       <div class="card principal ">
         <div class="card-body text-center wrapper " >
