--- a/src/app/components/comparacion-pilotos/comparacion-pilotos.component.html
+++ b/src/app/components/comparacion-pilotos/comparacion-pilotos.component.html
@@ -24,7 +24,7 @@
                     autocomplete="null" placeholder="Year">
                 <div class="text-danger"
                     *ngIf="comparacionForm.get('year')?.hasError('required') && comparacionForm.get('year')?.touched">
-                    <span>El año es <b>requerido</b></span>
+                    <span>Year is <b>required</b></span>
                 </div>
                 <br>
 
