--- a/src/app/components/mapa-mostrar/mapa-mostrar.component.html
+++ b/src/app/components/mapa-mostrar/mapa-mostrar.component.html
@@ -13,8 +13,8 @@
                 </div>         
             </div>
             <hr />
-            <div  class="mb-3 mt-5">
-                <button type="submit"  [disabled] = "yearForm.invalid" class="button-49" style="margin-left:530px; font-family:Formula1 Display Wide">Submit</button>
+            <div  class="mb-3 mt-5 d-flex justify-content-center">
+                <button type="submit"  [disabled] = "yearForm.invalid" class="button-49" style="font-family:Formula1 Display Wide">Submit</button>
             </div>
         </form>  
     </div>
