--- a/src/app/components/comparacion-pilotos/comparacion-pilotos.component.css
+++ b/src/app/components/comparacion-pilotos/comparacion-pilotos.component.css
@@ -182,6 +182,8 @@ font-family: "Formula1 Display Wide";
   height: 100vh;
   float: right;
   padding: 5%;
+  padding-top: 8%;
+  padding-left: 8%;
 
 
 }
