--- a/src/app/components/prueba/prueba.component.html
+++ b/src/app/components/prueba/prueba.component.html
@@ -1,14 +1,14 @@
 <div class="main d-flex justify-content-center">
     <div class="submain">
         <div class="container1 d-flex justify-content-center">
-            <a [routerLink]="['/telemetria']">
+            <a [routerLink]="['/telemetry']">
                 <div class="button">
                     <button mat-raised-button  color="warn" style="font-family:Formula1 Display Wide" >Telemetry (2)</button>
                 </div>
             </a>
         </div>
         <div class="container2 d-flex justify-content-center">
-            <a [routerLink]="['/estrategia']">
+            <a [routerLink]="['/estrategy']">
                 <div class="button">
                     <button mat-raised-button  color="warn" style="font-family:Formula1 Display Wide">Telemetry (1)</button>
                 </div>
