--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -13,16 +13,16 @@
         <div id="navbarSupportedContent" [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}" class="justify-content-center" >
       <ul class="navbar-nav " >
         <li class="nav-item active">
-          <a class="nav-link"   [routerLink]="['/carreras']">Results <span class="sr-only">(current)</span></a>
+          <a class="nav-link"   [routerLink]="['/races']">Results <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link"  [routerLink]="['/mapa']">F1 map</a>
+          <a class="nav-link"  [routerLink]="['/map']">F1 map</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link"  [routerLink]="['/comparacionPilotos']">Driver-comparisson</a>
+          <a class="nav-link"  [routerLink]="['/drivers-comparisson']">Driver-comparisson</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" [routerLink]="['/prueba']">Telemetry</a>
+          <a class="nav-link" [routerLink]="['/telemetry-options']">Telemetry</a>
         </li>
         <li  *ngIf="!variable"class="nav-item d-flex justify-content-md-end">
           <a class="nav-link " style="cursor:pointer"  [routerLink]="['/login']">Login</a>
