--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,14 +17,14 @@
 </head>
 
 
-<div class="subheader">
+<div class="subheader" style="position:relative">
 
   <div>
     <img class="classFlag" src="{{flag}}" width="50" height="50">
   </div>
 
-  <div class="titulo">
-    <p>FORMULA ONE WEB APPLICATION</p>
+  <div class="titulo" >
+    <p style="text-align:center; transform: translateY(80%);">FORMULA ONE WEB APPLICATION</p>
   </div>
 
   <div class="clockBorder">
