--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -3,6 +3,8 @@
     height: 100px;
     background-color: whitesmoke;
     margin-top:50px;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .carousel-caption {
@@ -23,6 +25,7 @@
     float: left;
     padding-left: 20px;
     margin-top: 35px;
+    z-index: 1;
 }
 
 .clockBorder{
@@ -59,6 +62,20 @@
     padding-top: 15px;
 }
 
+@media (max-width: 850px) {
+    .clockBorder {width: 20%;}
+    .clockHours {font-size: 10px;padding-left: 10px;}
+    .clockSeconds {padding-left: 10px !important; font-size: 10px !important;}
+    .titulo{width:20%;position:relative; top: 30% !important}
+    .subheader{justify-content: space-around;}
+}
+
+@media (max-width: 1920px) {
+    .subheader{position: relative;}
+    .titulo {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);}
+}
+
+
 .clockSeconds{
     width: 33%;
     height: 100%;
@@ -85,8 +102,6 @@
 
 .titulo{
     width: 60%;
-    background-color: whitesmoke;
-    margin-top:40px;
+    background-color: transparent;
     float: left;
-    font-size: 16px;
-    padding-left: 160px;}
+    font-size: 16px;}
